scss/mixins/_grid.scss
/// Grid system
// Generate semantic grid columns with these mixins.

// Containers
@mixin make-container($padding-x: $container-padding-x) {
    width: 100%;  // Prevent too narrow
    max-width: 100%; // Prevent too wide
    padding-right: $padding-x;
    padding-left: $padding-x;
    margin-right: auto;
    margin-left: auto;
}

// For each breakpoint, define the maximum width of the container in a media query
@mixin make-container-max-widths($max-widths: $container-max-widths, $breakpoints: $grid-breakpoints) {
    @each $breakpoint, $container-max-width in $max-widths {
        @include media-breakpoint-up($breakpoint, $breakpoints) {
            max-width: $container-max-width;
        }
    }
}


// Rows
@mixin make-row($gutter: $grid-gutter-width) {
    display: flex;
    flex-wrap: wrap;
    margin-right: ($gutter / -2);
    margin-left: ($gutter / -2);
}


// Columns
@mixin make-col-ready($gutter: $grid-gutter-width) {
    position: relative;
    width: 100%; // Prevent too narrow
    padding-right: ($gutter / 2);
    padding-left: ($gutter / 2);
}

@mixin make-col($size, $columns: $grid-columns) {
    flex: 0 0 percentage($size / $columns);
    // Add a `max-width` to ensure content within each column does not blow out
    // the width of the column. Applies to IE10+ and Firefox. Chrome and Safari
    // do not appear to require this.
    max-width: percentage($size / $columns);
}

@mixin make-col-auto() {
    flex: 0 0 auto;
    width: auto;
    max-width: 100%;
}

@mixin make-col-offset($size, $columns: $grid-columns) {
    $num: $size / $columns;
    margin-left: if($num == 0, 0, percentage($num));
}


// Row Columns
//
// Specify on a parent element(e.g., .row) to force immediate children into NN
// numberof columns. Supports wrapping to new lines, but does not do a Masonry
// style grid.
@mixin row-cols($count) {
    & > * {
        flex: 0 0 100% / $count;
        max-width: 100% / $count;
    }
}

// Grid generation
// Generate the correct number of grid classes given any value of `$grid-columns`
@mixin make-grid-columns($columns: $grid-columns, $breakpoints: $grid-breakpoints, $gutter: $grid-gutter-width) {
    // Use a placeholder selector to extend upon
    %col {
        position: relative;
        width: 100%; // Prevent too narrow
        padding-right: ($gutter / 2);
        padding-left: ($gutter / 2);
    }

    @each $breakpoint in map-keys($breakpoints) {
        $bprule: breakpoint-designator($breakpoint);

        // Allow columns to stretch full width below their breakpoints
        .col#{$bprule},
        .col#{$bprule}-auto {
            @extend %col;
        }
        @for $i from 1 through $grid-columns {
            .col#{$bprule}-#{$i} {
                @extend %col;
            }
        }

        @include media-breakpoint-up($breakpoint, $breakpoints) {
            // Provide basic `.col-{bp}` classes for equal-width flexbox columns
            %col-flex-basic-#{$breakpoint} {
                flex-basis: 0;
                flex-grow: 1;
                max-width: 100%;
            }

            %col-flex-auto-#{$breakpoint} {
                @include make-col-auto();
            }

            .col#{$bprule} {
                @extend %col-flex-basic-#{$breakpoint};
            }
            .col#{$bprule}-auto {
                @extend %col-flex-auto-#{$breakpoint};
            }
            @for $i from 1 through $columns {
                .col#{$bprule}-#{$i} {
                    @include make-col($i, $columns);
                }
            }

            // `$columns - 1` because offsetting by the width of an entire row isn't possible
            @for $i from 0 through ($columns - 1) {
                @if not($bprule == "" and $i == 0) { // Avoid emitting useless .offset-0
                    .offset#{$bprule}-#{$i} {
                        @include make-col-offset($i, $columns);
                    }
                }
            }
        }
    }
}

// Responsive Row Columns
@mixin make-row-columns($columns: $grid-row-columns, $breakpoints: $grid-breakpoints) {
    @each $breakpoint in $row-columns-breakpoints {
        $bprule: breakpoint-designator($breakpoint);

        @include media-breakpoint-up($breakpoint, $breakpoints) {
            @for $i from 1 through $columns {
                .row-cols#{$bprule}-#{$i} {
                    @include row-cols($i);
                }
            }
        }
    }
}

